--- a/cursos.html
+++ b/cursos.html
@@ -64,27 +64,27 @@
                     <div class="team-pic"></div>
                     <div class="team-member-title-wrap">
                         <div class="team-member-name"><span class="text-span">Mêcanica</span></div><a
-                            href="./work/mecanica.html" target="_blank" class="button-2 w-button">Veja Mais</a>
+                            href="mecanica.html" target="_blank" class="button-2 w-button">Veja Mais</a>
                     </div>
                 </div>
                 <div id="w-node-c28cc763-f708-1e61-f196-6bd9fce98043-dad81435" class="div-block-2">
                     <div class="team-pic"></div>
                     <div class="team-member-title-wrap">
-                        <div class="team-member-name">Automação</div><a href="./work/automacao.html" target="_blank"
+                        <div class="team-member-name">Automação</div><a href="automacao.html" target="_blank"
                             class="button-2 w-button">Veja Mais</a>
                     </div>
                 </div>
                 <div id="w-node-c28cc763-f708-1e61-f196-6bd9fce9804a-dad81435" class="div-block-3">
                     <div class="team-pic"></div>
                     <div class="team-member-title-wrap">
-                        <div class="team-member-name">Eletronica</div><a href="./work/eletronica.html" target="_blank"
+                        <div class="team-member-name">Eletronica</div><a href="eletronica.html" target="_blank"
                             class="button-2 w-button">Veja Mais</a>
                     </div>
                 </div>
                 <div id="w-node-c28cc763-f708-1e61-f196-6bd9fce98058-dad81435" class="div-block-4">
                     <div class="team-pic"></div>
                     <div class="team-member-title-wrap">
-                        <div class="team-member-name">Eletroeletronica</div><a href="./work/eletroeletronica.html"
+                        <div class="team-member-name">Eletroeletronica</div><a href="eletroeletronica.html"
                             target="_blank" class="button-2 w-button">Veja Mais</a>
                     </div>
                 </div>
