--- a/automacao.html
+++ b/automacao.html
@@ -24,16 +24,16 @@
 <body>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation w-nav">
-        <div class="navigation-wrap"><a href="/top/site-unesp.webflow.io/index.html" class="logo-link w-nav-brand"><img
+        <div class="navigation-wrap"><a href="index.html" class="logo-link w-nav-brand"><img
                     src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta.png"
                     width="108"
                     srcset="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta-p-500.png 500w, https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta.png 880w"
                     sizes="108px" alt="" class="logo-image" /></a>
             <div class="menu">
-                <nav role="navigation" class="navigation-items w-nav-menu"> <a href="/top/site-unesp.webflow.io/sobre.html"
+                <nav role="navigation" class="navigation-items w-nav-menu"> <a href="sobre.html"
                         class="navigation-item w-nav-link">SOBRE</a>
-                    <a href="/top/site-unesp.webflow.io/cursos.html" class="navigation-item w-nav-link">Cursos</a>
-                    <a href="/top/site-unesp.webflow.io/localizacao.html" class="navigation-item w-nav-link">Localização</a>
+                    <a href="cursos.html" class="navigation-item w-nav-link">Cursos</a>
+                    <a href="localizacao.html" class="navigation-item w-nav-link">Localização</a>
                 </nav>
                 <div class="menu-button w-nav-button"><img
                         src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634583abff90d58ff4d81446_menu-icon.png"
@@ -70,7 +70,7 @@
                         <div class="paragraph-light">Clique no link acima para baixar um Mini TCC feito pelos alunos do
                             1º ano de Automação Industrial do Colégio Técnico Industrial de Guaratinguetá sobre o curso.
                         </div><a
-                            href="http://127.0.0.1:5500/site-unesp.webflow.io/work/Mini%20TCC%20sobre%20Automa%C3%A7%C3%A3o%20Industrial%20para%20Conclus%C3%A3o%20de%20Semestre.pdf"
+                            href="http://127.0.0.1:5500/Mini%20TCC%20sobre%20Automa%C3%A7%C3%A3o%20Industrial%20para%20Conclus%C3%A3o%20de%20Semestre.pdf"
                             target="_blank" class="button-3 w-button">Clique aqui para baixar</a><img
                             src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/6349d78e6668dd0f7f74c805_mundinhoautomacaobr_20220811_p_2902629530771940189_1_2902629530771940189.jpeg"
                             loading="lazy" width="1190" height="900"
