--- a/eletroeletronica.html
+++ b/eletroeletronica.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <center>
-        <img src="/top/uploads-ssl.webflow.com/eletrogang__20220303_p_2785891500242416084_1_2785891500242416084.jpg" alt=""
+        <img src="eletrogang__20220303_p_2785891500242416084_1_2785891500242416084.jpg" alt=""
             style="width: 1190px; height: 900px;">
     </center>
     <div class="section">
