--- a/eletronica.html
+++ b/eletronica.html
@@ -24,16 +24,16 @@
 <body>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
         role="banner" class="navigation w-nav">
-        <div class="navigation-wrap"><a href="/site-unesp.webflow.io/index.html" class="logo-link w-nav-brand"><img
+        <div class="navigation-wrap"><a href="index.html" class="logo-link w-nav-brand"><img
                     src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta.png"
                     width="108"
                     srcset="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta-p-500.png 500w, https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta.png 880w"
                     sizes="108px" alt="" class="logo-image" /></a>
             <div class="menu">
-                <nav role="navigation" class="navigation-items w-nav-menu"> <a href="/site-unesp.webflow.io/sobre.html"
+                <nav role="navigation" class="navigation-items w-nav-menu"> <a href="sobre.html"
                         class="navigation-item w-nav-link">SOBRE</a>
-                    <a href="/site-unesp.webflow.io/cursos.html" class="navigation-item w-nav-link">Cursos</a>
-                    <a href="/site-unesp.webflow.io/localizacao.html" class="navigation-item w-nav-link">Localização</a>
+                    <a href="cursos.html" class="navigation-item w-nav-link">Cursos</a>
+                    <a href="localizacao.html" class="navigation-item w-nav-link">Localização</a>
                 </nav>
                 <div class="menu-button w-nav-button"><img
                         src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634583abff90d58ff4d81446_menu-icon.png"
@@ -52,7 +52,7 @@
         </div>
     </div>
     <center>
-        <img src="/top/uploads-ssl.webflow.com/2022eletronica_20220819_p_2908568765772303250_1_2908568765772303250.jpeg"
+        <img src="2022eletronica_20220819_p_2908568765772303250_1_2908568765772303250.jpeg"
             alt="" style="width: 1190px; height: 900px;">
     </center>
     <div class="section">
