--- a/mecanica.html
+++ b/mecanica.html
@@ -30,7 +30,7 @@
           srcset="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta-p-500.png 500w, https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634592823e8a35bbb6b2a139_logoctdgaiPreta.png 880w"
           sizes="108px" alt="" class="logo-image" /></a>
       <div class="menu">
-        <nav role="navigation" class="navigation-items w-nav-menu"> <a href="/top/site-unesp.webflow.io/sobre.html"
+        <nav role="navigation" class="navigation-items w-nav-menu"> <a href="sobre.html"
             class="navigation-item w-nav-link">SOBRE</a>
           <a href="cursos.html" class="navigation-item w-nav-link">Cursos</a>
           <a href="localizacao.html" class="navigation-item w-nav-link">Localização</a>
