--- a/automacao.html
+++ b/automacao.html
@@ -38,7 +38,7 @@
                 <div class="menu-button w-nav-button"><img
                         src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634583abff90d58ff4d81446_menu-icon.png"
                         width="22" alt="" class="menu-icon" /></div>
-            </div><a href="mailto:heitorleite28@outlook.com?subject=Voc%C3%AA%20tem%20e-mails!"
+            </div><a href="https://www.instagram.com/direct/t/340282366841710300949128395039499526216"
                 class="button cc-contact-us w-inline-block">
                 <div>CONTATO</div>
             </a>
