--- a/eletronica.html
+++ b/eletronica.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <center>
-        <img src="2022eletronica_20220819_p_2908568765772303250_1_2908568765772303250.jpeg"
+        <img srcset="https://uploads-ssl.webflow.com/2022eletronica_20220819_p_2908568765772303250_1_2908568765772303250.jpeg"
             alt="" style="width: 1190px; height: 900px;">
     </center>
     <div class="section">
