--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <img src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634583abff90d58ff4d81446_menu-icon.png"
                         width="22" alt="" class="menu-icon" />
                 </div>
-            </div><a href="mailto:heitorleite28@outlook.com?subject=Voc%C3%AA%20tem%20e-mails!"
+            </div><a href="https://www.instagram.com/direct/t/340282366841710300949128289352883590850"
                 class="button cc-contact-us w-inline-block">
-                <div>nos contate</div>
+                <div>CONTATO</div>
             </a>
         </div>
     </div>
