--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                                 eletrônicos.<br />‍<br />Eletroeletrônica: Realiza projetos e participa da execução de
                                 instalações elétricas residencial e predial, trabalhos de manutenção elétrica e
                                 eletrônica de equipamentos, ajustes, calibrações e aperfeiçoamentos de circuitos</p>
-                        </div><a href="/site-unesp.webflow.io/cursos.html" target="_blank" class="button w-inline-block">
-                            <div>VEja mais</div>
+                        </div><a href="cursos.html" target="_blank" class="button w-inline-block">
+                            <div>Veja mais</div>
                         </a>
                     </div><img
                         src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/634604b9f76e120a0ed5f852_Biblioteca.png"
@@ -105,7 +105,7 @@
                             <p class="paragraph-light"><strong>As atividades do Colégio Técnico Industrial de
                                     Guaratinguetá tiveram início no dia 31 de março de 1971. Os cursos de Eletrotécnica
                                     e de Máquinas e Motores foram os iniciais</strong></p>
-                        </div><a href="/site-unesp.webflow.io/sobre.html" target="_blank" class="button w-inline-block">
+                        </div><a href="sobre.html" target="_blank" class="button w-inline-block">
                             <div>Veja mais</div>
                         </a>
                     </div><img
