commit de tcc download

--- a/automacao.html
+++ b/automacao.html
@@ -70,8 +70,8 @@
                         <div class="paragraph-light">Clique no link acima para baixar um Mini TCC feito pelos alunos do
                             1º ano de Automação Industrial do Colégio Técnico Industrial de Guaratinguetá sobre o curso.
                         </div><a
-                            href="http://127.0.0.1:5500/Mini%20TCC%20sobre%20Automa%C3%A7%C3%A3o%20Industrial%20para%20Conclus%C3%A3o%20de%20Semestre.pdf"
-                            target="_blank" class="button-3 w-button">Clique aqui para baixar</a><img
+                            href="Mini TCC sobre Automação Industrial para Conclusão de Semestre.pdf"
+                            target="_blank" class="button-3 w-button" download>Clique aqui para baixar</a><img
                             src="https://uploads-ssl.webflow.com/634583aaff90d59817d81421/6349d78e6668dd0f7f74c805_mundinhoautomacaobr_20220811_p_2902629530771940189_1_2902629530771940189.jpeg"
                             loading="lazy" width="1190" height="900"
                             sizes="(max-width: 479px) 94vw, (max-width: 767px) 77vw, (max-width: 991px) 75vw, (max-width: 1919px) 94vw, 1140px"
