mecanica foto commit

--- a/mecanica.html
+++ b/mecanica.html
@@ -52,7 +52,7 @@
     </div>
   </div>
   <center>
-    <img srcset="https://uploads-ssl.webflow.com/mecmaioral_20220803_p_2896609706908383022_1_2896609706908383022.jpg"
+    <img srcset="mecmaioral_20220803_p_2896609706908383022_1_2896609706908383022.jpg"
       style="width: 1190px; height: 900px;">
   </center>
   <div class="section">
